fixed navbar on mobile

--- a/style/index.css
+++ b/style/index.css
@@ -154,7 +154,12 @@ footer a:hover{
 }
 @media (max-width: 800px){
     header nav a{
+        flex-wrap: nowrap;
         justify-content: center;
+        color: mediumpurple;
+        padding:0;
+        border: none;
+        background: lavender;
     }
     .hero{
         height: 100vh;
